--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "gatsby-datocms-demo",
   "description": "Gatsby DatoCMS creative portfolio demo",
   "version": "1.0.0",
-  "author": "Stefano Verna <s.verna@datocms.com>",
+  "author": "Tomoya Kuroda",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "dotenv": "^8.1.0",
+    "emailjs-com": "^2.4.1",
+    "formik": "^2.0.4",
     "gatsby": "^2.15.30",
     "gatsby-image": "^2.2.24",
     "gatsby-plugin-react-helmet": "^3.1.10",
@@ -12,8 +15,10 @@
     "gatsby-source-datocms": "^2.1.18",
     "gatsby-source-filesystem": "^2.1.29",
     "gatsby-transformer-remark": "^2.6.27",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.13.0",
+    "purecss": "^1.0.1",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.0",
     "react-masonry-component": "^6.2.1",
