--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "author": "Tomoya Kuroda",
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "cheeseburger-menu": "^0.0.13",
     "dotenv": "^8.1.0",
     "emailjs-com": "^2.4.1",
     "formik": "^2.0.4",
@@ -18,12 +18,12 @@
     "node-sass": "^4.13.0",
     "purecss": "^1.0.1",
     "react": "^16.10.2",
-    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.0",
     "react-masonry-component": "^6.2.1",
     "react-slick": "^0.25.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^4.4.1"
   },
   "keywords": [
     "gatsby"
