--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-source-datocms": "^2.1.18",
     "gatsby-source-filesystem": "^2.1.29",
     "gatsby-transformer-remark": "^2.6.27",
+    "gsap": "^3.0.1",
     "node-sass": "^4.13.0",
     "purecss": "^1.0.1",
     "react": "^16.10.2",
