--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "version": "1.0.0",
   "author": "Tomoya Kuroda",
   "dependencies": {
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "cheeseburger-menu": "^0.0.13",
     "dotenv": "^8.1.0",
     "emailjs-com": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "formik": "^2.0.4",
     "gatsby": "^2.15.30",
     "gatsby-image": "^2.2.24",
