--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "cheeseburger-menu": "^0.0.13",
+    "disable-scroll": "^0.5.0",
     "dotenv": "^8.1.0",
     "emailjs-com": "^2.4.1",
     "font-awesome": "^4.7.0",
